# ai-pilot-llm

./: .dockerignore  .gitignore  Dockerfile.serve  Dockerfile.train  MESSAGE_FOR_ANTIGRAVITY.md  README.md  TASK_FOR_ANTIGRAVITY_LLM_ABSTRACTION.md  do_copy.ps1  llm-contingency-plan.md  pyproject.toml
datasets/: advanced_sources.jsonl  educational.jsonl  educational_v2.jsonl  stats.json  val.jsonl
notebooks/: finetune_colab.ipynb
scripts/: augment_dataset.py  evaluate.py  finetune.py  generate_advanced.py  generate_educational.py  hetzner_deploy.sh  merge_datasets.py  ollama_import.sh  prepare_dataset.py  runpod_setup.sh  serve.py  validate_dataset.py
src/aipilot_llm/: __init__.py  anthropic_provider.py  base.py  geoip.py  health.py  local_provider.py  mistral_provider.py  openai_provider.py  router.py
src/aipilot_llm/routes/: __init__.py  code.py  integration_1c.py
tests/: __init__.py  conftest.py  helpers.py  test_1c_endpoints.py  test_anthropic.py  test_base.py  test_code_endpoints.py  test_geoip.py  test_hybrid_router.py  test_mistral.py  test_openai.py  test_router.py
