[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipilot-llm"
version = "0.1.0"
description = "AI PILOT LLM — Multi-provider abstraction layer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
