[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipilot-llm"
version = "0.1.0"
description = "AI PILOT LLM — Multi-provider abstraction layer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
