[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipilot-llm"
version = "0.2.0"
description = "AI PILOT LLM — Multi-provider abstraction layer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]
finetune = [
    "unsloth",
    "transformers>=4.46.0",
    "datasets>=3.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "accelerate>=1.0.0",
    "sentencepiece",
    "protobuf",
]
serve = ["vllm>=0.6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
